- Added fluent optional helpers that expand to (param IS NULL OR …) so compiled queries stay stable: PredicateStage.whereOptionalEquals/Like/GreaterOrEqual now materialize guarded condition groups via     OptionalConditions (core/src/main/java/org/in/media/res/sqlBuilder/api/query/PredicateStage.java:34-70, core/src/main/java/org/in/media/res/sqlBuilder/core/query/OptionalConditions.java:11-39).   - Introduced ParameterCondition and taught the clause buffers to preserve it, enabling ? IS NULL fragments inside grouped predicates (core/src/main/java/org/in/media/res/sqlBuilder/core/query/predicate/     ParameterCondition.java:13-84, core/src/main/java/org/in/media/res/sqlBuilder/core/query/predicate/ClauseConditionBuffer.java:49-66, core/src/main/java/org/in/media/res/sqlBuilder/core/query/     ConditionGroupBuilder.java:178-216).   - LIKE comparisons now accept SqlParameter<?> across the stack (core/src/main/java/org/in/media/res/sqlBuilder/api/query/Comparator.java:46-72, core/src/main/java/org/in/media/res/sqlBuilder/core/query/     WhereImpl.java:147-172, core/src/main/java/org/in/media/res/sqlBuilder/core/query/HavingImpl.java:271-324, core/src/main/java/org/in/media/res/sqlBuilder/core/query/QueryImpl.java:420-520).   - Relaxed parameter handling so optional filters can bind null: CompiledQuery no longer rejects null inputs and SqlAndParams safely stores them (core/src/main/java/org/in/media/res/sqlBuilder/api/query/     CompiledQuery.java:60-82, core/src/main/java/org/in/media/res/sqlBuilder/api/query/SqlAndParams.java:1-30).